# pbzarr-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pbzarr/: __init__.py  _backends.py  exceptions.py  region.py  store.py  track.py
tests/: test_backends.py  test_dask.py  test_exceptions.py  test_query.py  test_region.py  test_store.py  test_track.py  test_write.py
