[project]
name = "pbzarr"
version = "0.1.0"
description = "A Zarr v3 convention for per-base resolution genomic data"
authors = [{name = "Cade Mirchandani", email = "cmirchan@ucsc.edu"}]
license = {text = "MIT"}
requires-python = ">= 3.11"
readme = "README.md"
keywords = ["zarr", "genomics", "bioinformatics", "depth", "methylation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["zarr>=3.0", "numpy"]

[project.urls]
Homepage = "https://github.com/pbzarr/pbzarr-py"
Repository = "https://github.com/pbzarr/pbzarr-py"
Specification = "https://github.com/pbzarr/pbzarr-spec"

[project.optional-dependencies]
dask = ["dask[array]"]
all = ["dask[array]"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pbzarr = { path = ".", editable = true }
dask = { version = "*", extras = ["array"] }

[tool.pixi.dependencies]
numpy = "*"
zarr = ">=3.0"
pytest = "*"
mypy = ">=1.19.1,<2"

[tool.pixi.tasks]
test = "pytest tests/ -v"
typecheck = "mypy src/pbzarr/"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["dask.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
